--- a/server/app/templates/index.html
+++ b/server/app/templates/index.html
@@ -11,23 +11,19 @@
 
         <p>
             This tool was built for Georgia Tech's CS6460, with the goal of providing an immersive
-            environment for Chinese language learners to practice reading. By creating an account,
-            you will be able to load documents and vocabulary into the reader.
+            environment for Chinese language learners to practice reading. Upload a document here or by installing the Google Chrome Zhongwen extensions.
         </p>
 
         <p>
             Most Chinese words on the site are clickable. For example, try clicking on
             {{ render_chinese_word('你好') | safe }} or the word in the title of this page.
-            If you are logged in, you will also be able to store them to your personal vocabulary list.
         </p>
 
         <p>
             This project is adopted from a previous CS6460 student (Martin Kess, Summer 15').
             For suggestions and comments on platform, please email ericpan64@gatech.edu and I'll
-            try to work them into the current iteration of the project!
+            try to work them into the this iteration of the project!
         </p>
-
-
     </div>
 </div>
 {% endblock %}
