--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,32 @@
-<HTML>
-    <head></head>
-    <body>
-        <h1>Title</h1>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>CRM - 中文读机</title>
+</head>
+<body>
+    <header></header>
+    <nav>
+        <ul>
+            <li><a href="./about.html">About</a></li>
+            <li>Upload</li>
+        </ul>
 
-</HTML>
+    </nav>
+    <section>
+        <h1>Chinese Reading Machine (CRM) => 中文读机</h1>
+        <h2>About</h2>
+            <p>
+                The Chinese Reading Machine was built for Georgia Tech's CS6460, with the goal of providing
+                an immersive environment for Chinese language learners to practice reading.
+            </p>
+        <h2>How to Use</h2>
+        <p>
+            Works on this website are clickable.
+
+            Upload your own document to try it out!
+        </p>
+    </section>
+
+</body>
+</html>
